aaj movie dekhne jare hai guys date picker function separated in a class to avoid repetition of the same code, argument added in confirmation fragment which takes the timestamp of the date selected in template fragment.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -68,6 +68,9 @@
             app:destination="@id/templateFragment"
             app:popUpTo="@+id/splashScreenFragment"
             app:popUpToInclusive="false" />
+        <argument
+            android:name="dateSelected"
+            app:argType="long" />
     </fragment>
     <fragment
         android:id="@+id/templateFragment"
