--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -99,6 +99,8 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_splashScreenFragment_to_homePageFragment"
+            app:popUpTo="@+id/splashScreenFragment"
+            app:popUpToInclusive="false"
             app:destination="@id/homePageFragment" />
     </fragment>
 </navigation>
