--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="red">#FF0000</color>
     <color name="yellow">#FFBF00</color>
     <color name="green">#008000</color>
+    <color name="backgroundLightTheme">#F1F9FF</color>
 </resources>
