bas isliye papa kehte the IIT karle! reformatted the code

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -99,8 +99,8 @@
             app:destination="@id/loginFragment" />
         <action
             android:id="@+id/action_splashScreenFragment_to_homePageFragment"
+            app:destination="@id/homePageFragment"
             app:popUpTo="@+id/splashScreenFragment"
-            app:popUpToInclusive="false"
-            app:destination="@id/homePageFragment" />
+            app:popUpToInclusive="false" />
     </fragment>
 </navigation>
