chashma uda liye 3d wala! background removed from global style and added in specific fragments.

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".loginandregister.LoginFragment">
+    android:backgroundTint="@color/backgroundLightTheme"
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/logoCon6.5"
