--- a/app/src/main/res/layout/fragment_template.xml
+++ b/app/src/main/res/layout/fragment_template.xml
@@ -52,6 +52,7 @@
         app:layout_constraintBottom_toTopOf="@+id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/backgroundLightTheme"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
