--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -48,7 +48,7 @@
         android:layout_marginStart="30dp"
         android:fontFamily="@font/sharp_grotesk_medium20"
         android:gravity="center"
-        android:text="Your Statictic"
+        android:text="Your Statistics"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
